# btpy

./: Dockerfile  README.md  README.rst  dependencies.sh  pyproject.toml  requirements.txt  setup.py
btpy/: ClassicDevice.py  LEDevice.py  __init__.py  __main__.py  bt.py
btpy/device/: __init__.py  beacon.py  classic.py  le.py
btpy/libs/: Device.py  Service.py  Static.py
btpy/libs/bt/: beacon.py  classic.py  le.py
test/: test.py
