[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[project]
name = "btpy"
version = "2.0.5"
requires-python = ">= 3.11"
authors = [{name = "nbdy"}]
maintainers = [{name = "nbdy"}]
readme = "README.md"
license = {text = "MIT License"}
keywords = ["bluetooth", "ble", "beacon", "classic", "library"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pybluez @ git+https://github.com/pybluez/pybluez.git#egg=pybluez",
    "bleak",
    "beacontools[scan]"
]

[project.urls]
Homepage = "https://github.com/nbdy/btpy"
Documentation = "https://github.com/nbdy/btpy/wiki"
Repository = "https://github.com/nbdy/btpy.git"
Issues = "https://github.com/nbdy/btpy/issues"
Changelog = "https://github.com/nbdy/btpy/blob/main/CHANGELOG.md"

[project.scripts]
vidscaler = "btpy:main"
